<resources>
    <string name="app_name">Bluedoll</string>
    <string name="splash_screen_title">Bluedoll</string>
    <!-- Login -->
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_have_account">Dont have an account yet?</string>
    <string name="login_register_here">Register Here</string>
    <!-- Register -->
    <string name="registration_title_hint">Register</string>
    <string name="registration_fullname_hint">Fullname</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_passwordconf_hint">Confirm Password</string>
    <string name="registration_gender_male">Male</string>
    <string name="registration_gender_female">Female</string>
    <string name="registration_terms_hint">I agree on the terms and conditions</string>
    <string name="registration_button">Register</string>
    <string name="registration_already_account">Already have an account?</string>
    <string name="registration_login_here">Login Here</string>
    <!--  Title Activity String  -->
    <string name="view_all_dolls">List All Dolls</string>
    <string name="view_doll_detail">Doll Detail</string>
    <!--  Modify Activity String  -->
    <string name="modify_title">Modify Doll</string>
    <string name="modify_name_hint">Doll Name</string>
    <string name="modify_desc_hint">Doll Description</string>
    <string name="modify_button_save">Save</string>
    <string name="modify_button_cancel">Cancel</string>
    <!--  About Activity String  -->
    <string name="about_doll_title">About Us</string>
    <string name="about_doll_subtitle">
        BlueDoll is one of the most famous company which provides high quality dolls worldwide.
        BlueDoll always give their customer a good product and services.
    </string>
    <string name="about_doll_menu">Our Location</string>
    <!-- Drawer -->
    <string name="creator_group">Kelompok 2</string>
    <string name="creator_member">
        Cakra Buana, Alvin Purnama C, Eurico Valentino</string>
    <!--  Modify Spinner Array String  -->
    <string-array name="list_doll_image">
        <item>Brown Doll</item>
        <item>Panda Doll</item>
        <item>White Doll</item>
    </string-array>
    <string name="open_menu" />
    <string name="close_menu" />
    <string name="detail_share">Share Doll</string>
    <string name="detail_back">Back to Main Menu</string>
</resources>