<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ModifyActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/poppinssemibold"
        android:gravity="center"
        android:text="@string/modify_title"
        android:textColor="@color/purple_700"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/edit_doll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppinsreguler"
        android:hint="@string/modify_name_hint"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_doll_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppinsreguler"
        android:hint="@string/modify_desc_hint"
        android:maxLines="2" />

    <Spinner
        android:id="@+id/spinner_doll_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppinsreguler"
        android:padding="16dp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/modify_button_save"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/purple_500"
        android:fontFamily="@font/poppinssemibold"
        android:text="@string/modify_button_cancel" />

</LinearLayout>